fixed some small spacing issues

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 html, body {
-	height: 98vh;
+	height: 100vh;
+	overflow: hidden;
 }
 
 body {
@@ -9,7 +10,7 @@ body {
 	margin: 0;
 	color: white;
 
-	font-size: 24px;
+	font-size: 20px;
 	font-family: "Lato", sans-serif;
 }
 
@@ -38,7 +39,7 @@ body {
 
 		width: 69.6%;
 		margin: auto;
-		padding-top: 20px;
+		padding-top: 0px;
 		background-color: rgba(34, 34, 34, 0.825);
 		text-align: center;
 
@@ -46,7 +47,7 @@ body {
 	}
 
 	main video {
-		width: 80%;
+		width: 75%;
 		height: auto;
 		max-height: 66vh;
 		opacity: 1;
@@ -55,7 +56,7 @@ body {
 
 	main h1 {
 		margin: 6px;
-		font-size: 60px;
+		font-size: 50px;
 		font-weight: bold;
 	}
 
